<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/holo_orange_light"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/welcome_in_weather_report"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextCity1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:hint="@string/city"
        android:padding="10dp"
        android:textSize="25sp" />

    <Button
        android:id="@+id/buttonCity1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/holo_orange_light"
        android:padding="5dp"
        android:text="@string/get_report" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:padding="10dp"
        android:text="@string/use_your_current_location"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonCurrent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15sp"
        android:layout_marginRight="20dp"
        android:background="@android:color/holo_orange_light"
        android:padding="5dp"
        android:text="@string/current_location"
        android:textStyle="bold" />

</LinearLayout>