<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:padding="10dp"
        android:id="@+id/textViewCity2"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@android:color/holo_orange_light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/temp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dash"
            android:layout_marginTop="5dp"
            android:id="@+id/textViewTemp"
            android:textSize="20sp"
            android:padding="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/humidity"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dash"
            android:layout_marginTop="5dp"
            android:id="@+id/textViewHum"
            android:textSize="20sp"
            android:padding="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dash"
            android:id="@+id/textViewLong"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:padding="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dash"
            android:id="@+id/textViewLat"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:padding="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/wind"
            android:textStyle="bold"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dash"
            android:id="@+id/textViewWind"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:padding="10dp"/>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="Thank You :)"
        android:textSize="20sp"
        android:padding="10dp"
        android:gravity="center"/>


</LinearLayout>